# wsim

./: .pre-commit-config.yaml  .pre-commit-setup.md  CLAUDE.md  PROMPT.md  README.md  progress.txt  ralph.sh
.beads/: issues.jsonl
.github/workflows/: ci.yml
backend/: README.md  progress.txt  pyproject.toml
backend/scenarios/: mvp_crossing_paths_v1.json  mvp_frigate_duel_v1.json  mvp_two_ship_line_battle_v1.json
backend/tests/: __init__.py  test_api.py  test_e2e_scenarios.py  test_games_router.py  test_persistence.py  test_persistence_api.py  test_persistent_store.py  test_rng.py  test_store.py
backend/tests/engine/: __init__.py  test_arc.py  test_collision.py  test_combat.py  test_damage.py  test_drift.py  test_fouling.py  test_movement_executor.py  test_movement_parser.py  test_reload.py  test_targeting.py  test_victory.py
backend/tests/events/: __init__.py  test_event_log.py
backend/tests/models/: test_common.py  test_events.py  test_game.py  test_hex.py  test_orders.py  test_ship.py
backend/tests/serialization/: __init__.py  test_scenario_loader.py
backend/wsim_api/: __init__.py  main.py  persistent_store.py  store.py
backend/wsim_api/routers/: games.py  persistence.py
backend/wsim_core/: __init__.py
backend/wsim_core/engine/: __init__.py  arc.py  collision.py  combat.py  damage.py  drift.py  fouling.py  movement_executor.py  movement_parser.py  reload.py  rng.py  targeting.py  victory.py
backend/wsim_core/events/: __init__.py  event_log.py
backend/wsim_core/models/: __init__.py  common.py  events.py  game.py  hex.py  orders.py  scenario.py  ship.py
backend/wsim_core/serialization/: __init__.py  game_persistence.py  scenario_loader.py
backend/wsim_core/tables/: __init__.py  hit_tables.json
docs/: ACCESSIBILITY_AUDIT.md  MVP_PRD_and_Use_Cases.md  MVP_Scenarios.md  MVP_TRD_FastAPI_React.md  UX_REDESIGN.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx  responsive.css  typography.css
(+29 files in other folders)
